--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,14 +29,14 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".menu_principal">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".menu_principal"/>
         <activity android:name=".localizacao" />
         <activity android:name=".horario" />
 
@@ -47,12 +47,12 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-           <activity android:name=".camera"
-              android:label="@string/app_name"
+        <activity android:name=".camera"
+            android:label="@string/app_name"
 
-              android:screenOrientation="landscape">
-              <!-- configure this activity to use landscape orientation -->
-          </activity>
+            android:screenOrientation="landscape">
+            <!-- configure this activity to use landscape orientation -->
+        </activity>
     </application>
 
 </manifest>
