--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.classphotoholder">
+    package="com.example.classphotofolder">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -29,16 +29,16 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.classphotofolder.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".menu_principal"/>
-        <activity android:name=".localizacao" />
-        <activity android:name=".horario" />
+        <activity android:name="com.example.classphotofolder.menu_principal"/>
+        <activity android:name="com.example.classphotofolder.localizacao" />
+        <activity android:name="com.example.classphotofolder.horario" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -47,7 +47,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".camera"
+        <activity android:name="com.example.classphotofolder.camera"
             android:label="@string/app_name"
 
             android:screenOrientation="landscape">
