--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,16 @@
             android:authorities="com.example.android.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
+
+            <!-- Caminho para o funcionamento da camera -->
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
+
+
         </provider>
 
+        <!-- Utilizando a main activity como launcher -->
         <activity android:name="com.example.classphotofolder.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,16 +43,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Outras activities -->
         <activity android:name="com.example.classphotofolder.menu_principal"/>
         <activity android:name="com.example.classphotofolder.localizacao" />
         <activity android:name="com.example.classphotofolder.horario" />
 
+        <!-- declarações para utilização da API do mapa -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyD_2n3GLfV7TPF2ZUoSRbqn0yeTV6Kg48A" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <!-- orientação da activity da camera -->
 
         <activity android:name="com.example.classphotofolder.camera"
             android:label="@string/app_name"
