--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,12 +31,10 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
-
-
         </provider>
 
         <!-- Utilizando a main activity como launcher -->
-        <activity android:name="com.example.classphotofolder.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,9 +43,9 @@
         </activity>
 
         <!-- Outras activities -->
-        <activity android:name="com.example.classphotofolder.menu_principal"/>
-        <activity android:name="com.example.classphotofolder.localizacao" />
-        <activity android:name="com.example.classphotofolder.horario" />
+        <activity android:name=".menu_principal" />
+        <activity android:name=".localizacao" />
+        <activity android:name=".horario" />
 
         <!-- declarações para utilização da API do mapa -->
         <meta-data
@@ -59,12 +57,14 @@
 
         <!-- orientação da activity da camera -->
 
-        <activity android:name="com.example.classphotofolder.camera"
+        <activity
+            android:name=".camera"
             android:label="@string/app_name"
-
             android:screenOrientation="landscape">
+
             <!-- configure this activity to use landscape orientation -->
         </activity>
+        <activity android:name=".novoHorario"></activity>
     </application>
 
 </manifest>
